--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/dart.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/dart/dart.png" alt="..." />
                     </div>
                 </div>
                 <!-- Portfolio Item 4-->
@@ -193,11 +193,12 @@
                     <a class="btn btn-outline-dark btn-social mx-1" id="list-phone-list" data-toggle="list"
                         href="#list-phone" role="tab" aria-controls="phone"><i class="fa fa-phone"
                             aria-hidden="true"></i></a>
-                    <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Gawoyme"><i
-                            class="fab fa-fw fa-github"></i></a>
-                    <a class="btn btn-outline-dark btn-social mx-1"
-                        href="https://linkedin.com/in/othmane-gherib-180a231a0"><i
-                            class="fab fa-fw fa-linkedin-in"></i></a>
+                    <span class="btn btn-outline-dark btn-social mx-1" 
+                    onclick="window.open('https://github.com/Gawoyme')"><i
+                            class="fab fa-fw fa-github"></i></span>
+                    <span class="btn btn-outline-dark btn-social mx-1"
+                        onclick="window.open('https://linkedin.com/in/othmane-gherib-180a231a0')"><i
+                            class="fab fa-fw fa-linkedin-in"></i></span>
                 </div>
             </div>
             <div class="d-flex justify-content-center p-1">
