--- a/test.html
+++ b/test.html
@@ -20,9 +20,13 @@
     <link href="css/stylescss.css" rel="stylesheet" />
 </head>
 
+
+
 <body id="page-top">
-    <div id="breakoutScoreDisplay"> 0 </div>
-    <div class="breakoutGrid"></div>
+        <div class="breakoutGrid"></div>
+            <div class ="breakoutScore" id="breakoutScoreDisplay"> 0 </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -35,10 +39,9 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.js"></script>
     <!-- Core theme JS-->
-    <!-- <script src="js/scripts.js"></script>
-    <script src="js/rockpaperscissors.js"></script> -->
+    <script src="js/scripts.js"></script>
+    <script src="js/rockpaperscissors.js"></script>
     <script src="js/breakout.js"> </script>
-
 </body>
 
 </html>
