Fighting game starter

--- a/test.html
+++ b/test.html
@@ -20,13 +20,8 @@
     <link href="css/stylescss.css" rel="stylesheet" />
 </head>
 
-
-
 <body id="page-top">
-        <div class="breakoutGrid"></div>
-            <div class ="breakoutScore" id="breakoutScoreDisplay"> 0 </div>
-        </div>
-    </div>
+    <canvas id="fighting_game"> </canvas>
     <i class="fa-solid fa-c"></i>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -43,6 +38,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/rockpaperscissors.js"></script>
     <script src="js/breakout.js"> </script>
+    <script src="js/fighting_game.js"> </script>
 </body>
 
 </html>
