--- a/test.html
+++ b/test.html
@@ -21,8 +21,27 @@
 </head>
 
 <body id="page-top">
-    <canvas id="fighting_game"> </canvas>
-    <i class="fa-solid fa-c"></i>
+    <div style="position:relative; display:inline-block">
+        <div style="position:absolute ;display:flex; width: 100%; align-items: center;">
+            <!-- player health -->
+            <div style="position:relative;height: 30px;width:100% ;display:flex;justify-content: flex-end;">
+                <div style="background-color:yellow; height: 30px; width: 100%;"> </div>
+                <div id="playerHealthBar" style="background-color:red; position: absolute; top: 0; right: 0; bottom: 0;width: 100%;"> </div>
+            </div>
+            <!-- timer -->
+            <div style="background-color:rgb(255, 72, 0); height: 100px; width: 100px; flex-shrink: 0;"> </div>
+            <!-- enemy health -->
+            <div style="position:relative;height: 30px;width:100%">
+                <div style="background-color:yellow; height: 30px; width: 100%;"> </div>
+                <div id="enemyHealthBar" style="background-color:blue; position: absolute; top: 0; right: 0; bottom: 0;left: 0; width: 100%;"> </div>
+            </div>
+        </div>
+        <canvas id="fighting_game"> </canvas>
+    </div>
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
